# quiz

./: .gitignore  CMakeLists.txt  FAQ  Makefile  README.md
google_speech/: __init__.py
inc/: analyzer.h  log.h  ncurces_screen.h  options.h  parser.h  problem.h  quiz.h  utils.h  viewer.h  voice.h  window.h
inc/view/: iview.h
include/: analyzer.h  editor.h  log.h  ncurces_screen.h  parser.h  problem.h  utils.h  viewer.h  voice.h  window.h
samples/: recall.qz  test.qz  test2.qz
src/: analyzer.cpp  learn.cpp  log.cpp  main.cpp  ncurces_screen.cpp  options.cpp  parser.cpp  problem.cpp  quiz.cpp  record.cpp  utils.cpp  viewer.cpp  voice.cpp
src/include/: ncurces_screen.h  parser.h  problem.h  record.h  viewer.h
src/view/ncurses/: editor.cpp  ncurses_screen.cpp  window.cpp
src/view/qt/: main.qml
sublime/: quiz.sublime-syntax
test/: .eng.stat  .phr1.stat  .test.stat  .test1.stat  .word_1.stat  .word_4.stat  analyzer-test.cpp  eng.lrn  phr1.lrn  test.lrn  test1.lrn  word_1.lrn  word_4.lrn
